<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/entriesRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/name"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/city"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:singleLine="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSendToB"
        android:layout_width="230dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/entriesRootLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/colorButton"
        android:textColor="@color/colorText"
        android:text="@string/send_to_activity_b"
        android:textSize="19sp"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorViewLine"
        app:layout_constraintTop_toBottomOf="@id/buttonSendToB"
        android:layout_marginTop="25dp"
/>

    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="36sp"
        android:text="@string/review"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/messageFromActivityB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/reviewTitle"
        android:layout_marginTop="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="italic"/>

</androidx.constraintlayout.widget.ConstraintLayout>