<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/entriesTitleRootLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        android:paddingStart="25dp"
        android:paddingTop="25dp"
        android:paddingEnd="0dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/city_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataFromMainRootLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        app:layout_constraintLeft_toRightOf="@id/entriesTitleRootLayout">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/cityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="24sp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/ageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/entriesTitleRootLayout"
        android:layout_marginTop="25dp"
        android:background="@color/colorViewLine"/>

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        android:layout_marginTop="50dp"
        android:hint="@string/leave_a_review"
        android:textStyle="italic"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:gravity="bottom"
        android:background="@color/colorViewLine"/>

    <Button
        android:id="@+id/buttonSendToMain"
        android:layout_width="250dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/reviewEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/colorButton"
        android:textColor="@color/colorText"
        android:text="@string/send_to_main_activity"
        android:textSize="19sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>